# EdgeDetection

./: README.md
code/: .gitignore  CMakeLists.txt  Laplacian.cpp  LoG.cpp  RobertsCross.cpp  canny.cpp  pathconfig.h.in  prewitt.cpp  sobel.cpp
